[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_top" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_new" type="Button" parent="container_top"]
margin_top = 9.0
margin_right = 38.0
margin_bottom = 29.0
size_flags_vertical = 4
text = "new"

[node name="btn_save" type="Button" parent="container_top"]
margin_left = 42.0
margin_top = 9.0
margin_right = 83.0
margin_bottom = 29.0
size_flags_vertical = 4
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_load" type="Button" parent="container_top"]
margin_left = 87.0
margin_top = 9.0
margin_right = 126.0
margin_bottom = 29.0
size_flags_vertical = 4
text = "load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_quit" type="Button" parent="container_top"]
margin_left = 130.0
margin_top = 9.0
margin_right = 167.0
margin_bottom = 29.0
size_flags_vertical = 4
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_title" type="Label" parent="."]
margin_left = 13.0
margin_top = 62.0
margin_right = 53.0
margin_bottom = 86.0
text = "Title"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="label_title"]
margin_left = 40.0
margin_right = 154.0
margin_bottom = 24.0

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
margin_top = 106.122
margin_bottom = 301.122
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ItemList" type="ItemList" parent="TabContainer/World"]
margin_right = 290.0
margin_bottom = 117.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/World"]
margin_left = 313.0
margin_right = 399.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_item_add" type="Button" parent="TabContainer/World/VBoxContainer"]
margin_right = 86.0
margin_bottom = 20.0
text = "Add"

[node name="btn_item_add2" type="Button" parent="TabContainer/World/VBoxContainer"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 44.0
text = "Edit"

[node name="btn_item_remove" type="Button" parent="TabContainer/World/VBoxContainer"]
margin_top = 48.0
margin_right = 86.0
margin_bottom = 68.0
text = "Remove"

[node name="btn_item_move_up" type="Button" parent="TabContainer/World/VBoxContainer"]
margin_top = 72.0
margin_right = 86.0
margin_bottom = 92.0
text = "Move up"

[node name="btn_item_move_down" type="Button" parent="TabContainer/World/VBoxContainer"]
margin_top = 96.0
margin_right = 86.0
margin_bottom = 116.0
text = "Move down"

[node name="Source" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="output" type="TextEdit" parent="TabContainer/Source"]
margin_right = 290.0
margin_bottom = 159.0
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Source"]
margin_left = 313.0
margin_right = 399.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_source_import" type="Button" parent="TabContainer/Source/VBoxContainer"]
margin_right = 86.0
margin_bottom = 20.0
text = "Import"

[node name="btn_source_export" type="Button" parent="TabContainer/Source/VBoxContainer"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 44.0
text = "Export"

[node name="dialog_gamesaved" type="AcceptDialog" parent="."]
margin_left = 331.0
margin_top = 39.0
margin_right = 414.0
margin_bottom = 97.0
window_title = "Game Saved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 512.0
margin_bottom = 206.0
window_title = "Open a File"
resizable = true
mode = 0
access = 1
show_hidden_files = true
current_dir = "user://"
current_file = "saved_game.sav"
current_path = "user://saved_game.sav"

[node name="dialog_save" type="FileDialog" parent="."]
margin_left = 70.0
margin_top = 54.0
margin_right = 508.0
margin_bottom = 268.0
resizable = true
access = 1
current_dir = "user://"
current_file = "saved_game.sav"
current_path = "user://saved_game.sav"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 819.0
margin_bottom = 316.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="CenterContainer"]
margin_left = 109.0
margin_top = 8.0
margin_right = 709.0
margin_bottom = 308.0
rect_min_size = Vector2( 600, 300 )
window_title = "Add Text Node"
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/ConfirmationDialog/VBoxContainer"]
margin_right = 584.0
margin_bottom = 24.0

[node name="label_node_name" type="Label" parent="CenterContainer/ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 76.0
margin_bottom = 19.0
text = "Node Name"

[node name="edit_node_name" type="LineEdit" parent="CenterContainer/ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CenterContainer/ConfirmationDialog/VBoxContainer"]
margin_top = 28.0
margin_right = 584.0
margin_bottom = 42.0
text = "Enter text here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="CenterContainer/ConfirmationDialog/VBoxContainer"]
margin_top = 46.0
margin_right = 584.0
margin_bottom = 256.0
size_flags_vertical = 3
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="update_data" from="." to="." method="_on_main_update_data"]
[connection signal="pressed" from="container_top/btn_new" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="container_top/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="container_top/btn_load" to="." method="_on_btn_load_pressed"]
[connection signal="pressed" from="container_top/btn_quit" to="." method="_on_btn_quit_pressed"]
[connection signal="text_changed" from="label_title/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="TabContainer/World/VBoxContainer/btn_item_add" to="." method="_on_btn_item_add_pressed"]
[connection signal="pressed" from="TabContainer/World/VBoxContainer/btn_item_remove" to="." method="_on_btn_item_remove_pressed"]
[connection signal="text_changed" from="TabContainer/Source/output" to="." method="_on_output_text_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="dialog_save" to="." method="_on_dialog_save_file_selected"]
[connection signal="confirmed" from="CenterContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
